tests/paczka1/small_fuzzy/81568197.err
Error in line 7: A952 S462 81,6
Error in line 8: WdJ A42 99,1
Error in line 10: A952 A952 5,8
